opam-version: "2.0"
version: "1.0"
maintainer: "Thibaut Gudin <tgudin@besport.com>"
authors: "Thibaut Gudin <tgudin@besport.com>"
homepage: "git+https://github.com/besport/ocaml-google-analytics-tags"
bug-reports: "git+https://github.com/Thibaut-Gudin/ocaml-google-analytics-tags/issues"
dev-repo: "git+https://github.com/besport/ocaml-google-analytics-tags"
license: "LGPL-2.1 with OCaml linking exception"
description: "Binding to the `analytics.js` plugin using gen_js_api"
synopsis: "Binding to the `analytics.js` plugin using gen_js_api"
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
depends: [
  "ocaml" { >= "4.08.0"}
  "dune" {>= "2.8"}
  "gen_js_api"
  "js_of_ocaml"
  "js_of_ocaml-ppx"
]
